--- a/sass/custom/_variables.scss
+++ b/sass/custom/_variables.scss
@@ -147,3 +147,4 @@ $go-back-button-hover:                      null;
 /////////////////////////////
 
 $input-padding-x:                           1rem;
+$input-color:                               $gray-900;
