--- a/sass/custom/_card.scss
+++ b/sass/custom/_card.scss
@@ -2,3 +2,10 @@
 	z-index: 1;
 	box-shadow: $box-shadow;
 }
+
+.download-container {
+	.content {
+		max-height: 38.5rem;
+		overflow-y: scroll;
+	}
+}
