--- a/sass/custom/_reboot.scss
+++ b/sass/custom/_reboot.scss
@@ -1,7 +1,9 @@
 body,html, .wrapper {
     min-height: 100vh;
 }
-
+a {
+    font-weight: $font-weight-bold;
+}
 .wrapper {
     position: relative;
     padding-bottom:2rem;
